# gdt

./: Cargo.toml  README.md  requirements.txt  setup.sh
src/: errors.rs  godot.rs  main.rs
src/package/: mod.rs  package.rs
templates/godot/: lib{{name}}.gdnlib  project.godot
templates/rust/: build.sh  test.sh
templates/rust/src/: gameworld.rs  lib.rs
templates/test/: lib{{name}}.gdnlib  main.gd  project.godot
