[package]
name = "gdt"
version = "0.1.0"
authors = ["Jonas Hagstedt <hagstedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
toml = "0.5.5"
serde_derive = "1.0.104"
serde = "1.0.104"
ring = "0.16.9"
data-encoding = "2.1.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2.8", features = ["full"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"
regex = "1.3.1"
lazy_static = "1.4.0"
cargo = "0.41.0"
failure = "0.1.6"
